<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/game_name"
            android:textColor="@color/colorPrimary"
            >

        </TextView>
        <EditText
            android:layout_margin="40dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textAlignment="center"
            android:hint="@string/hint_username"
            android:singleLine="true"
           >
        </EditText>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_btn"
            android:padding="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="40dp"
            android:onClick="onClickGame"
            android:id="@+id/btn_StartGame"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/High_score_btn"
            android:layout_marginHorizontal="40dp"
            android:padding="30dp"
            android:onClick="onClickHigh"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginBottom="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                android:orientation="vertical"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ></TextView>
        </RelativeLayout>

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>