<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/High_score"
            android:layout_marginVertical="40dp"
            android:textAlignment="center"
            android:textSize="40sp"
            >
        </TextView>
        <ListView
            android:id="@+id/lv_HighScore"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:layout_weight="4"
            android:layout_margin="20dp"
            android:contentDescription="@string/user1"
            ></ListView>



        <Button
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Back"
            android:layout_marginHorizontal="40dp"
            android:padding="30dp"
            android:onClick="onClickBack"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>